<resources>
    <plurals name="delete_error">
        <item quantity="one">Unable to delete %d tunnel: %s</item>
        <item quantity="other">Unable to delete %d tunnels: %s</item>
    </plurals>
    <plurals name="delete_success">
        <item quantity="one">Successfully deleted %d tunnel</item>
        <item quantity="other">Successfully deleted %d tunnels</item>
    </plurals>
    <plurals name="delete_title">
        <item quantity="one">%d tunnel selected</item>
        <item quantity="other">%d tunnels selected</item>
    </plurals>
    <plurals name="import_partial_success">
        <item quantity="one">Imported %d of %d tunnels</item>
        <item quantity="other">Imported %d of %d tunnels</item>
    </plurals>
    <plurals name="import_total_success">
        <item quantity="one">Imported %d tunnel</item>
        <item quantity="other">Imported %d tunnels</item>
    </plurals>
    <plurals name="set_excluded_applications">
        <item quantity="one">%d Excluded Application</item>
        <item quantity="other">%d Excluded Applications</item>
    </plurals>
    <plurals name="confirm_tunnel_deletion">
        <item quantity="one">Delete selected tunnel?</item>
        <item quantity="other">Delete selected tunnels?</item>
    </plurals>
    <string name="add_peer">Add peer</string>
    <string name="addresses">Addresses</string>
    <string name="allowed_ips">Allowed IPs</string>
    <string name="app_name" translatable="false">Viscerion</string>
    <string name="bad_config_context">%1$s\'s %2$s</string>
    <string name="bad_config_context_top_level">%s</string>
    <string name="bad_config_error">%1$s in %2$s</string>
    <string name="bad_config_explanation_pka">: Must be positive and no more than 65535</string>
    <string name="bad_config_explanation_positive_number">: Must be positive</string>
    <string name="bad_config_explanation_udp_port">: Must be a valid UDP port number</string>
    <string name="bad_config_reason_invalid_key">Invalid key</string>
    <string name="bad_config_reason_invalid_number">Invalid number</string>
    <string name="bad_config_reason_invalid_value">Invalid value</string>
    <string name="bad_config_reason_missing_attribute">Missing attribute</string>
    <string name="bad_config_reason_missing_section">Missing section</string>
    <string name="bad_config_reason_missing_value">Missing value</string>
    <string name="bad_config_reason_syntax_error">Syntax error</string>
    <string name="bad_config_reason_unknown_attribute">Unknown attribute</string>
    <string name="bad_config_reason_unknown_section">Unknown section</string>
    <string name="bad_config_reason_value_out_of_range">Value out of range</string>
    <string name="bad_extension_error">File must be .conf or .zip</string>
    <string name="cancel">Cancel</string>
    <string name="config_delete_error">Cannot delete configuration file %s</string>
    <string name="config_exists_error">Configuration for “%s” already exists</string>
    <string name="config_file_exists_error">Configuration file “%s” already exists</string>
    <string name="config_not_found_error">Configuration file “%s” not found</string>
    <string name="config_rename_error">Cannot rename configuration file “%s”</string>
    <string name="config_save_error">Cannot save configuration for “%1$s”: %2$s</string>
    <string name="config_save_success">Successfully saved configuration for “%s”</string>
    <string name="create_activity_title">Create WireGuard Tunnel</string>
    <string name="create_bin_dir_error">Cannot create local binary directory</string>
    <string name="create_empty">Create from scratch</string>
    <string name="create_from_file">Create from file or archive</string>
    <string name="create_from_qr_code">Create from QR code</string>
    <string name="create_output_dir_error">Cannot create output directory</string>
    <string name="create_temp_dir_error">Cannot create local temporary directory</string>
    <string name="create_tunnel">Create Tunnel</string>
    <string name="delete">Delete</string>
    <string name="deselect_all">Deselect All</string>
    <string name="disable_tunnel">Disable tunnel: %s</string>
    <string name="dns_servers">DNS servers</string>
    <string name="edit">Edit</string>
    <string name="enable_tunnel">Enable tunnel: %s</string>
    <string name="endpoint">Endpoint</string>
    <string name="error_down">Error bringing down tunnel: %s</string>
    <string name="error_fetching_apps">Error fetching apps list: %s</string>
    <string name="error_root">Please obtain root access and try again</string>
    <string name="error_up">Error bringing up tunnel: %s</string>
    <string name="exclude_private_ips_on">Include private IPs</string>
    <string name="exclude_private_ips_off">Exclude private IPs</string>
    <string name="excluded_applications">Excluded Applications</string>
    <string name="generate">Generate</string>
    <string name="generic_error">Unknown “%s” error</string>
    <string name="hint_automatic">(auto)</string>
    <string name="hint_generated">(generated)</string>
    <string name="hint_optional">(optional)</string>
    <string name="hint_random">(random)</string>
    <string name="hint_search">Search Tunnels</string>
    <string name="illegal_filename_error">Illegal file name “%s”</string>
    <string name="import_error">Unable to import tunnel: %s</string>
    <string name="import_from_qr_code">Import Tunnel from QR Code</string>
    <string name="import_success">Imported “%s”</string>
    <string name="interface_title">Interface</string>
    <string name="key_length_explanation_base64">: WireGuard base64 keys must be 44 characters (32 bytes)</string>
    <string name="key_length_explanation_binary">: WireGuard keys must be 32 bytes</string>
    <string name="key_length_explanation_hex">: WireGuard hex keys must be 64 characters (32 bytes)</string>
    <string name="listen_port">Listen port</string>
    <string name="log_export_error">Unable to export log: %s</string>
    <string name="log_export_success">Saved to “%s”</string>
    <string name="log_export_summary">Log file will be saved to downloads folder</string>
    <string name="log_export_title">Export log file</string>
    <string name="module_version_error">Unable to determine kernel module version</string>
    <string name="mtu">MTU</string>
    <string name="multiple_tunnels_error">Only one userspace tunnel can run at a time</string>
    <string name="name">Name</string>
    <string name="no_config_error">Trying to bring up a tunnel with no config</string>
    <string name="no_configs_error">No configurations found</string>
    <string name="no_tunnels_error">No tunnels exist</string>
    <string name="parse_error_generic">string</string>
    <string name="parse_error_inet_address">IP address</string>
    <string name="parse_error_inet_endpoint">endpoint</string>
    <string name="parse_error_inet_network">IP network</string>
    <string name="parse_error_integer">number</string>
    <string name="parse_error_reason">Cannot parse %1$s “%2$s”</string>
    <string name="peer">Peer</string>
    <string name="persistent_keepalive">Persistent keepalive</string>
    <string name="pre_shared_key">Pre-shared key</string>
    <string name="private_key">Private key</string>
    <string name="public_key">Public key</string>
    <string name="public_key_description">Public key</string>
    <string name="qr_code_hint">Tip: generate with `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
    <string name="restore_on_boot_summary">Bring up previously-enabled tunnels on boot</string>
    <string name="restore_on_boot_title">Restore on boot</string>
    <string name="save">Save</string>
    <string name="select_all">Select all</string>
    <string name="set_exclusions">Set Exclusions</string>
    <string name="settings">Settings</string>
    <string name="shell_exit_status_read_error">Shell cannot read exit status</string>
    <string name="shell_marker_count_error">Shell expected 4 markers, received %d</string>
    <string name="shell_start_error">Shell failed to start: %d</string>
    <string name="toggle_error">Error toggling WireGuard tunnel: %s</string>
    <string name="tools_installer_already">wg and wg-quick are already installed</string>
    <string name="tools_installer_failure">Unable to install command-line tools (no root?)</string>
    <string name="tools_installer_initial">Install optional tools for scripting</string>
    <string name="tools_installer_initial_magisk">Install optional tools for scripting as Magisk module</string>
    <string name="tools_installer_initial_system">Install optional tools for scripting into the system partition</string>
    <string name="tools_installer_success_magisk">wg and wg-quick installed as a Magisk module (reboot required)</string>
    <string name="tools_installer_success_system">wg and wg-quick installed into the system partition</string>
    <string name="tools_installer_title">Install command line tools</string>
    <string name="tools_installer_working">Installing wg and wg-quick</string>
    <string name="tools_unavailable_error">Required tools unavailable</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_rx_tx">rx: %1$s, tx: %2$s</string>
    <string name="tunnel_name">Tunnel Name</string>
    <string name="zip_export_summary">Zip file will be saved to downloads folder</string>
    <string name="zip_export_title">Export tunnels to zip file</string>
    <string name="global_exclusions_title">Global exclusions</string>
    <string name="global_exclusions_summary">Select applications to be excluded from all WireGuard tunnels by default</string>
    <string name="force_userspace_backend_title">Force userspace backend</string>
    <string name="force_userspace_backend_summary">Useful for debugging Go userspace issues when device has a kernel module installed. Application will restart upon toggling this. DEVELOPERS ONLY!</string>
    <string name="whitelist_exclusions_title">Whitelist apps in tunnels</string>
    <string name="whitelist_exclusions_summary">Rather than allow selected apps to bypass the tunnel, make exclusions force them to go through the tunnel instead, letting all other apps behave as if there is no active VPN connection.</string>
    <string name="preference_category_about">About</string>
    <string name="preference_category_config">Tunnel configurations</string>
    <string name="preference_category_debugging">Debugging</string>
    <string name="preference_category_theming">Theming</string>
    <string name="preference_category_misc">Misc</string>
    <string name="tasker_integration_title">Enable tasker integration</string>
    <string name="tasker_integration_enable_or_disable_tunnel">Enable / Disable Tunnel</string>
    <string name="tasker_integration_summary">WARNING: This is a potential security risk! Avoid using this on rooted devices, malicious apps can very easily circumvent the protection put in place by Viscerion!</string>
    <string name="tasker_integration_secret">Tasker Secret</string>
    <string name="tasker_integration_secret_title">External intent secret</string>
    <string name="tasker_integration_secret_summary">Secured secret to ensure only trusted clients can control tunnels. This cannot be empty!</string>
    <string name="pref_alt_icon_title">Use alternate icon</string>
    <string name="pref_alt_icon_summary">Switch to the new work-in-progress refresh of the Viscerion icon</string>
    <string name="pref_dark_theme_title">Enable dark theme</string>
    <string name="pref_dark_theme_summary">Switch to a darker theme that can help save some power on AMOLED displays</string>
    <string name="biometric_auth_title">Enable biometric authentication</string>
    <string name="biometric_auth_summary">When enabled, Viscerion will prompt you for your fingerprint when launching the app</string>
    <string name="search">Search</string>
</resources>