<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_category_about">
        <com.wireguard.android.preference.VersionPreference
            android:icon="@drawable/alt_launcher_icon" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_theming">
        <CheckBoxPreference
            android:key="dark_theme"
            android:title="@string/pref_dark_theme_title"
            android:summary="@string/pref_dark_theme_summary" />
        <CheckBoxPreference
            android:key="use_alt_icon"
            android:title="@string/pref_alt_icon_title"
            android:summary="@string/pref_alt_icon_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_config">
        <CheckBoxPreference
            android:key="restore_on_boot"
            android:title="@string/restore_on_boot_title"
            android:summary="@string/restore_on_boot_summary" />
        <CheckBoxPreference
            android:key="whitelist_exclusions"
            android:title="@string/whitelist_exclusions_title"
            android:summary="@string/whitelist_exclusions_summary"/>
        <Preference
            android:key="global_exclusions"
            android:title="@string/global_exclusions_title"
            android:summary="@string/global_exclusions_summary" />
        <SwitchPreferenceCompat
            android:key="allow_tasker_integration"
            android:title="@string/tasker_integration_title"
            android:summary="@string/tasker_integration_summary" />
        <EditTextPreference
            android:defaultValue=""
            android:key="intent_integration_secret"
            android:title="@string/tasker_integration_secret_title"
            android:summary="@string/tasker_integration_secret_summary" />
        <com.wireguard.android.preference.ToolsInstallerPreference android:key="tools_installer" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_debugging">
        <Preference
            android:key="zip_exporter"
            android:title="@string/zip_export_title"
            android:summary="@string/zip_export_summary" />
        <SwitchPreferenceCompat
            android:key="force_userspace_backend"
            android:title="@string/force_userspace_backend_title"
            android:summary="@string/force_userspace_backend_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_misc">
        <SwitchPreferenceCompat
            android:key="fingerprint_auth"
            android:title="@string/biometric_auth_title"
            android:summary="@string/biometric_auth_summary" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
