<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        android:alphabeticShortcut="q"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_settings"
        android:alphabeticShortcut="s"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_log"
        android:title="@string/log_export_title"
        android:alphabeticShortcut="l"
        app:showAsAction="never" />
</menu>
