<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="activity"
            type="com.wireguard.android.activity.TaskerActivity" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="?attr/colorBackground"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tasker_tunnel_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tunnel_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tasker_secret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tasker_integration_secret" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/tasker_tunnel_enable_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checked="@={activity.enableTunnel}"
            android:text="@string/tasker_integration_enable_or_disable_tunnel" />

        <Button
            android:id="@+id/tasker_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/save" />

    </LinearLayout>

</layout>
