<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.wireguard.android.model.Tunnel.State" />
        <import type="com.wireguard.android.util.ExtensionsKt" />
        <variable
            name="fragment"
            type="com.wireguard.android.fragment.TunnelDetailFragment" />
        <variable
            name="tunnel"
            type="com.wireguard.android.model.Tunnel" />
        <variable
            name="config"
            type="me.msfjarvis.viscerion.config.Config" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorBackground">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tunnel_detail_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/colorBackground"
            app:cardCornerRadius="0dp"
            app:cardElevation="2dp"
            app:contentPadding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/interface_title"
                    style="@style/Medium.CustomFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interface_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.wireguard.android.widget.ToggleSwitch
                    android:id="@+id/tunnel_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:checked="@{tunnel.state == State.UP}"
                    app:onBeforeCheckedChanged="@{fragment::setTunnelState}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/interface_title"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/interface_name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:labelFor="@+id/interface_name_text"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/interface_title"/>

                <TextView
                    android:id="@+id/interface_name_text"
                    style="@style/Medium.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{tunnel.name}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/interface_name_label"/>

                <TextView
                    android:id="@+id/public_key_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:labelFor="@+id/public_key_text"
                    android:text="@string/public_key"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/interface_name_text"/>

                <TextView
                    android:id="@+id/public_key_text"
                    style="@style/Medium.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/public_key_description"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:onClick="@{ExtensionsKt::copyTextView}"
                    android:text="@{config.interfaze.keyPair.publicKey.toBase64}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/public_key_label"/>

                <TextView
                    android:id="@+id/addresses_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:labelFor="@+id/addresses_text"
                    android:text="@string/addresses"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/public_key_text"/>

                <TextView
                    android:id="@+id/addresses_text"
                    style="@style/Medium.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/addresses"
                    android:text="@{config.interfaze.addresses}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addresses_label"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/peers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:divider="@null"
            android:orientation="vertical"
            app:items="@{config.peers}"
            app:layout="@{@layout/tunnel_detail_peer}"
            app:layout_constraintTop_toBottomOf="@+id/tunnel_detail_card"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UselessLeaf"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
